balance overlaping fix

--- a/shared/pages/Wallet/Row/Row.scss
+++ b/shared/pages/Wallet/Row/Row.scss
@@ -429,7 +429,7 @@ tr button[disabled]:hover {
 
   .errorMessage,
   .assetsTableCurrencyWrapper {
-    background: none;
+    background: #222528;
   }
 
   .no-select-inline {
